# conduit

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  build_and_install.sh
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: daemon.rs  foreground_commands.rs  history.rs  ipc.rs  lib.rs  paths.rs  sessions.rs  state.rs  transport.rs
crates/core/src/workspace/: attention.rs  git.rs  mod.rs  process_info.rs  pull_request.rs  ssh.rs  terminal.rs
crates/core/tests/: adopt_integration.rs  git_integration.rs  ssh_integration.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: assets.rs  auth.rs  control.rs  fs.rs  lib.rs  proxy.rs  tls.rs  ws.rs
crates/server/tests/: embedded.rs
crates/tui/: Cargo.toml
crates/tui/linux/: conduit.desktop
crates/tui/macos/: Info.plist
crates/tui/src/: app.rs  keymap.rs  main.rs  resurrect.rs  shortcuts.rs  terminal_core.rs
crates/tui/src/ui/: footer.rs  help.rs  mod.rs
crates/tui/src/ui/screens/: home.rs  mod.rs  repo_summary.rs  workspace.rs
crates/tui/src/ui/widgets/: mod.rs  sidebar.rs  tile_grid.rs  workspace_bar.rs
docs/adr/: 0001-repository-workspace-worktree-model.md  0002-ready-for-review-orthogonal-to-attention.md  0003-unified-surface-session-cli.md  0004-diff-questions-target-agent-terminal.md  0005-pr-viewer-github-cli-boundary.md
experiments/gui-spike/: Cargo.toml  NOTES.md
experiments/gui-spike/bridge/: Cargo.toml
experiments/gui-spike/bridge/src/: lib.rs
experiments/gui-spike/gpui-front/: Cargo.toml
experiments/gui-spike/gpui-front/src/: main.rs
experiments/gui-spike/iced-front/: Cargo.toml
experiments/gui-spike/iced-front/src/: main.rs
experiments/gui-spike/smoke/: Cargo.toml
experiments/gui-spike/smoke/src/: main.rs
experiments/gui-spike/termgrid/: Cargo.toml
experiments/gui-spike/termgrid/src/: lib.rs
web/: README.md  package.json  tsconfig.base.json
web/app/: index.html  package.json  tsconfig.json  vite.config.ts
web/app/public/assets/web/: site.webmanifest
web/app/src/: App.tsx  app.css  client.ts  index.tsx  router.ts  theme.css  vite-env.d.ts
web/app/src/brand/: logo.ts
web/app/src/components/: AddRepositoryModal.tsx  AppModals.tsx  CommandPalette.tsx  ConduitMark.tsx  ConnectionBanner.tsx  CreateWorkspaceModal.tsx  Dialogs.tsx  LoginScreen.tsx  Modal.tsx  SessionPicker.tsx  SettingsModal.tsx  Sidebar.tsx  StatusGlyph.tsx  TerminalRegion.tsx  TerminalView.tsx  Toasts.tsx  WorkspaceRow.tsx
web/app/src/components/git/: BranchesPanel.tsx  ChangesPanel.tsx  CommitsPanel.tsx  DiffAskComposer.tsx  DiffView.tsx  GitRegion.tsx  GitSidebar.tsx  ReviewPanel.tsx
web/app/src/lib/: flip.ts  fs.ts  slug.ts
web/app/src/screens/: BoardScreen.tsx  PullRequestScreen.tsx  WorkspaceScreen.tsx
web/app/src/state/: apply-event.ts  dialogs.ts  diff-ask.ts  fonts.ts  git-actions.ts  manage.ts  modals.ts  palette.ts  pr-actions.ts  selectors.ts  session.ts  sessions.ts  settings.ts  split.ts  store.ts  tabs.ts  theme.ts  toasts.ts  ui.ts
web/brand/: README.md  logo.js  palettes.json
web/brand/assets/web/: site.webmanifest  web-head.html
web/brand/tokens/: colors.css
web/shared/: package.json
web/shared/src/: b64.ts  client.ts  diff.ts  events.ts  index.ts  terminal.ts  theme.css
web/shared/src/protocol/: AttentionLevel.ts  BranchInfo.ts  ChangedFile.ts  CheckoutSource.ts  Command.ts  CommitInfo.ts  Event.ts  GitState.ts  PullRequestChecksSummary.ts  PullRequestComment.ts  PullRequestCommentKind.ts  PullRequestCommentTarget.ts  PullRequestDetails.ts  PullRequestDiffLine.ts  PullRequestDiffLineKind.ts  PullRequestDiffSide.ts  PullRequestFile.ts  PullRequestProvider.ts  PullRequestRef.ts  PullRequestSummary.ts  RemoteBranchInfo.ts  RepositorySummary.ts  Route.ts  SavedCommand.ts  SshTarget.ts  TagInfo.ts  TerminalKind.ts  WorkspaceSummary.ts  index.ts
