[package]
name = "protocol"
version.workspace = true
edition = "2021"

[features]
# TypeScript bindings for the web UI:
#   TS_RS_EXPORT_DIR=<repo>/web/shared/src/protocol cargo test -p protocol --features ts
ts = ["dep:ts-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
ts-rs = { version = "12", features = ["uuid-impl"], optional = true }
