[package]
name = "conduit_server"
version.workspace = true
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
conduit_core = { path = "../core" }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
