[package]
name = "conduit_server"
version.workspace = true
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
conduit_core = { path = "../core" }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
axum-extra = { version = "0.10", features = ["cookie"] }
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.29"
futures-util = "0.3"
