[package]
name = "tui"
version.workspace = true
edition = "2021"

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
conduit_core = { path = "../core" }
anyhow = "1"
alacritty_terminal = "0.26"
base64 = "0.22"
vt100 = "0.15"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
uuid = "1"
regex = "1"
