[package]
name = "tui"
version.workspace = true
edition = "2021"

[[bin]]
name = "conduit"
path = "src/main.rs"

[features]
# On by default so a plain `conduit` opens the native desktop window. Headless
# builds (servers running `conduit web`) opt out with `--no-default-features`,
# which drops the GTK/WebKit link and makes bare `conduit` fall back to the
# terminal UI.
default = ["desktop"]
desktop = ["dep:conduit_desktop"]

[dependencies]
protocol = { path = "../protocol" }
conduit_core = { path = "../core" }
conduit_server = { path = "../server" }
conduit_desktop = { path = "../desktop", optional = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
alacritty_terminal = "0.26"
base64 = "0.22"
vt100 = "0.15"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
uuid = "1"
regex = "1"
rpassword = "7"

# Desktop bundle metadata (cargo-packager). Bundles the `conduit` binary built
# with `--features desktop`. The macOS `.app` (via Info.plist LSEnvironment) and
# the Linux `.desktop` launcher both make a double-click open the web UI window.
[package.metadata.packager]
product-name = "Conduit"
identifier = "space.citra.conduit"
formats = ["app", "dmg", "deb", "appimage"]
# Standard 1x sizes only — cargo-packager's macOS .icns builder rejects sizes
# with no 1x IconType (e.g. 1024 = 512@2x, 64 = 32@2x) with "No matching IconType".
icons = ["icons/16x16.png", "icons/32x32.png", "icons/128x128.png", "icons/256x256.png", "icons/512x512.png"]

[package.metadata.packager.macos]
# Merged over cargo-packager's generated Info.plist: sets CONDUIT_DESKTOP=1 so
# the bare binary the `.app` launches opens the desktop window (see main.rs).
info-plist-path = "macos/Info.plist"

[package.metadata.packager.deb]
# Custom launcher: `Exec=conduit desktop`. Reused by the AppImage build too.
desktop-template = "linux/conduit.desktop"
